--- a/LabMVC/Lab06/Views/Home/Index.cshtml
+++ b/LabMVC/Lab06/Views/Home/Index.cshtml
@@ -14,13 +14,22 @@
 	<div class="container w-50">
 		<ul class="list-group">
 			<li class="list-group-item">
-				<a href="/TacGia/">Danh sách tác giả</a>
+				<a href="/TacGia">Danh sách tác giả</a>
 			</li>
 			<li class="list-group-item">
 				<a href="/NhaXuatBan">Danh sách nhà xuất bản</a>
 			</li>
 			<li class="list-group-item">
-				<a href="/Sach">Danh sách sách</a>
+				<a href="/Sach">Sách theo Nhà xuất bản</a>
+			</li>
+			<li class="list-group-item">
+				<a href="/Sach/TheoChuDe">Sách theo Chủ đề</a>
+			</li>
+			<li class="list-group-item">
+				<a href="/Sach/TheoDonGia">Sách theo Đơn giá</a>
+			</li>
+			<li class="list-group-item">
+				<a href="/HocSinh">Danh sách Học sinh</a>
 			</li>
 		</ul>
 	</div>
