--- a/LabMVC/Lab06/Views/TacGia/Index.cshtml
+++ b/LabMVC/Lab06/Views/TacGia/Index.cshtml
@@ -9,7 +9,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width" />
-	<title>Trang chủ</title>
+	<title>Tác giả</title>
 	@Styles.Render("~/Content/css")
 </head>
 <body>
@@ -54,7 +54,7 @@
 	</table>
 
 	<nav>
-		<ul class="pagination">
+		<ul class="pagination justify-content-center">
 
 			@if (ViewBag.Page > 1)
 			{
