Fix Lab02, Lab04

--- a/LabMVC/Lab02/Views/Download/Index.cshtml
+++ b/LabMVC/Lab02/Views/Download/Index.cshtml
@@ -15,14 +15,14 @@
 	<ul class="list-group w-50 ms-1 mt-1">
 		<li class="list-group-item">
 			Bài tập thực hành Lab01
-			<a href="https://sharedoc.hiepsiit.com/vendors/viewpdf/viewer.html?file=https://sharedoc.hiepsiit.com/docs/Lab01%20-%20Lam%20quen%20voi_6082475814cd7.pdf">
+			<a href="https://tailieu.hiepsiit.com/vendors/viewpdf/viewer.html?file=https://tailieu.hiepsiit.com/docs/Lab02 - Cac doi tuong.Net.pdf">
 				Click để download
 			</a>
 		</li>
 		<li class="list-group-item">
 			Bài tập thực hành Lab01
 			<a href="/Download/Download" download style="text-decoration: none; ">
-				<img src="~/Assets/download.png" width="30" height="30"/>
+				<img src="~/Assets/download.png" width="30" height="30" />
 				Tải về
 			</a>
 		</li>
